--- a/src/App.scss
+++ b/src/App.scss
@@ -6,18 +6,17 @@
     "Lucida Sans", Arial, sans-serif;
 }
 body {
-  background: linear-gradient(
-    90deg,
-    rgb(126, 122, 168) 0%,
-    rgb(49, 174, 231) 100%
-  );
+  background: url(./images/back5.jfif) no-repeat center/cover;
+  // background-Size: 100% 100%;
+  background-position: center;
+  height: 80vh;
 }
 .todo-app {
   display: flex;
   flex-direction: column;
   justify-content: start;
   width: 520px;
-  min-height: 600px;
+  min-height: 300px;
   background: #161a2b;
   text-align: center;
   margin: 128px auto;
@@ -122,4 +121,32 @@ h1 {
 }
 .edit-icon {
   color: #fff;
+}
+@media screen and (max-width:560px) {
+  body {
+    background: #161a2b;
+  }
+  .todo-input {
+    width:150px;
+    font-size: 12px;
+  }
+  h1 {
+    margin: 32px 0;
+    color: #fff;
+    font-size: 18px;
+  }
+  .todo-app {
+    width: unset;
+    min-height: unset;
+    background: #161a2b;
+    margin:30px auto;
+ 
+  }
+  .todo-row{
+    font-size:12px;
+    width:83%
+  }
+  .todo-button {
+    font-size: 12px;
+  }
 }
